# kotadb

./: .dockerignore  .env.sample  .env.test  .gitignore  .mcp.json  .mcp.sample.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  FIX_COMPLETION_REPORT.md  LICENSE  QUICKSTART.md  README.md  ROADMAP.md  biome.json  docker-compose.test.yml  docker-compose.yml  fly.toml  package.json  test-auto-close.md  tsconfig.json  vercel.json
automation/: .coveragerc  README.md  package.json  pyproject.toml  tsconfig.json
automation/.claude/commands/: bun_install.md  conditional_docs.md  find_plan_file.md  generate_branch_name.md  implement.md  install.md  pr-review.md  prime.md  pull_request.md  validate-implementation.md
automation/__tests__/: context-injection.test.ts  mcp-config.test.ts  pr.test.ts
automation/adws/: .env.sample  README.md  TESTING_CHECKLIST.md  adw_build_update_homeserver_task.py  adw_plan.py  adw_plan_build.py  adw_plan_build_document.py  adw_plan_build_review.py  adw_plan_build_test.py  adw_plan_implement_update_homeserver_task.py  adw_sdlc.py  github.py  health_check.py  surgical_fix.py  trigger_cron.py  trigger_webhook.py  utils.py
automation/adws/adw_agents/: README.md  __init__.py  agent_classify_issue.py  agent_cleanup_worktree.py  agent_commit_implementation.py  agent_commit_plan.py  agent_create_plan.py  agent_create_pr.py  agent_generate_branch.py  agent_implement_plan.py  agent_push_branch.py  agent_review_code.py  orchestrator.py
automation/adws/adw_agents_tests/: __init__.py  test_agent_classify_issue.py  test_agent_create_plan.py  test_agent_generate_branch.py  test_agent_orchestrator.py
automation/adws/adw_modules/: __init__.py  agent.py  agent_resolution.py  beads_ops.py  data_types.py  exit_codes.py  git_ops.py  github.py  mcp_bridge.py  orchestrators.py  state.py  tasks_api.py  token_streaming.py  utils.py  validation.py  workflow_ops.py
automation/adws/adw_phases/: adw_build.py  adw_document.py  adw_patch.py  adw_plan.py  adw_review.py  adw_test.py  test_frontend_dashboard.py  test_frontend_indexing.py  test_frontend_search.py
automation/adws/adw_tests/: __init__.py  test_agent_worktree_isolation.py  test_analyze_logs.py  test_beads_integration.py  test_checkpoints.py  test_cleanup_stale_worktrees.py  test_commands_root.py  test_diagnostic_logging.py  test_git_ops_branch_divergence.py  test_git_ops_worktree.py  test_github_comment_formatting.py  test_mcp_integration.py  (+12 more)
automation/docker/: adw-runner.Dockerfile  adw-webhook.Dockerfile
automation/scripts/: test-frontend-examples.sh
automation/src/: auto-record.ts  batch.ts  checkpoint.ts  context.test.ts  context.ts  curator.ts  github.ts  index.ts  logger.ts  manifest.ts  metrics.ts  orchestrator.ts  parser.ts  pr.ts  prompt-loader.ts  reporter.test.ts  reporter.ts  retry.ts  validator.ts  workflow.ts  worktree.ts
(+1061 files in other folders)
