[project]
name = "kota-automation"
version = "0.1.0"
description = "KotaDB AI Developer Workflows automation layer"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=6.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["adws"]

[tool.pytest.ini_options]
testpaths = ["adws/adw_tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "integration: marks tests as integration tests requiring dev server (deselect with '-m \"not integration\"')",
    "asyncio: marks tests as async (handled by pytest-asyncio plugin)",
]

[tool.uv]
dev-dependencies = [
    "pip-audit>=2.7.0",
]

[tool.coverage.run]
source = ["adws"]
omit = [
    "*/tests/*",
    "*/adw_tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/.venv/*"
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.json]
output = "coverage.json"

[tool.ruff]
# Enforce stdout/stderr standards by blocking print() usage
select = ["T201"]  # Disallow print statements
ignore = []

[tool.ruff.per-file-ignores]
# Allow print() in scripts that are meant to be run directly (not imported)
"adws/scripts/*.py" = ["T201"]
